--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,15 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.17</version>
+        <version>3.4.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     
     <groupId>com.sessionflow</groupId>
-    <artifactId>sessionflow</artifactId>
+    <artifactId>sessionflow-backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>SessionFlow</name>
-    <description>Task Management System with Session Tracking</description>
+    <name>sessionflow-backend</name>
+    <description>SessionFlow Backend Application</description>
     
     <properties>
         <java.version>17</java.version>
@@ -71,14 +71,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
