--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,10 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
 
 # JPA/Hibernate Configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 
 # H2 Console Configuration
 spring.h2.console.enabled=true
@@ -20,9 +19,11 @@ spring.h2.console.settings.web-allow-others=false
 server.port=8080
 
 # Logging Configuration
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.com.sessionflow=DEBUG
+# The following settings are now controlled by the run.sh script flags (--verbose, --debug)
+# to allow for dynamic log level management.
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# logging.level.com.sessionflow=DEBUG
 
 # SpringDoc OpenAPI Configuration
 springdoc.api-docs.path=/api-docs
@@ -31,4 +32,11 @@ springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.try-it-out-enabled=true
 springdoc.swagger-ui.operations-sorter=method
 springdoc.swagger-ui.tags-sorter=alpha
-springdoc.show-actuator=false 
+springdoc.show-actuator=false
+
+# Actuator Configuration
+# Expose the startup endpoint to analyze application startup performance.
+management.endpoints.web.exposure.include=health,info,startup
+
+# Spring Boot Lazy Initialization Configuration
+spring.main.lazy-initialization=true 
