--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+# This is now controlled by the --verbose/--debug flags in run.sh
+# spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 
 # H2 Console Configuration
