--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,30 @@ application-*.yml
 application-*.properties
 !application-example.yml
 !application-example.properties
+
+# Added by Claude Task Master
+# Logs
+logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dev-debug.log
+# Dependency directories
+node_modules/
+# Environment variables
+.env
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+
+# Cursor
+.roo
+.cursor
+
+src/main/resources/static/sessionflowapp/
